Version 6.0.147.1 (cherry-pick)

Merged ce5ffd931cad057e551de25f3a42b7b358e146ec

Revert "Fix runtime_call_stats for background parsing."

R=cbruni@chromium.org
BUG=chromium:717854,v8:6093
LOG=N

Change-Id: I8a9b1919eecb6f6adb4a184727f64065e11d792b
Reviewed-on: https://chromium-review.googlesource.com/494610
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Cr-Commit-Position: refs/heads/6.0.147@{#2}
Cr-Branched-From: 6cb995b936d63ce651273ff420d3dbf80ff71f13-refs/heads/master@{#45069}